poc-terragrunt/layers/k8s/app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  ports:
  - port: ${configs.ports.service.http}
    targetPort: ${configs.ports.internal.http}
  selector:
    app: ${application}
