poc-terragrunt/layers/k8s/app/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${name}
  namespace: ${namespace}
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ${configs.fqdn}
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: ${service}
              port:
                number: ${configs.ports.service.http}
